# Strongest-snake

./: .gitignore  CMakeLists.txt  README.md  TODO.md  game.cpp  game.h  gas_station.aseprite  go.bat  main.cpp  rigmor.config  run.bat  todo.txt  vcpkg-configuration.json  vcpkg.json
LICENSES/: LICENCE  stb_image.LICENSE.txt
assets/: atlas.aseprite  atlas.rigdb  fonts.aseprite
game/: AABB.h  Atlas.h  AtlasIndex.h  Buffer.h  Camera.h  CaveSystem.h  Chunk.h  Collision.h  Colors.h  DrawCmd.h  Engine.h  Entity.h  EntityManager.h  EntityType.h  FragPushConstant.h  Game.h  Globals.cpp  Globals.h  GpuExecutor.h  InstanceBlock.h  InstanceData.h  Item.h  Logrador.h  Material.h  MeshRegistry.h  Mining.h  ParticleSystem.h  Pipelines.h  PushConstants.h  QueueFamily.h  RenderLayer.h  Renderable.h  Renderer.h  RendererApplication.h  RendererBarriers.h  RendererInstanceStorage.h  RendererSempahores.h  RendererSwapchain.h  RendererUISystem.h  Shadertype.h  (+13 more)
game/components/: AABB.h  Entity.h  EntityType.h  Ground.h  GroundCosmetic.h  GroundOre.h  Health.h  Material.h  Mesh.h  OreRef.h  Renderable.h  Transform.h
game/contexts/: FrameCtx.h
libs/ankerl/: stl.h  unordered_dense.h
rigmor/: README.md  build.ps1  rigmor.hpp  test_atlas.rigdb  test_rigmor.hpp  test_script.ps1
shaders/: border.frag  border.spv  comp_particle.comp  comp_particle.spv  comp_particle_counters.comp  comp_particle_counters.spv  comp_particle_sim.comp  comp_particle_sim.spv  comp_particle_spawn.comp  comp_particle_spawn.spv  dir_arrow.frag  dir_arrow.spv  frag.frag  frag.spv  frag_border.frag  frag_border.spv  frag_flat.frag  frag_particle.frag  frag_particle.spv  frag_shadow_overlay.frag  frag_shadow_overlay.spv  frag_simple_ui.frag  frag_texture.frag  frag_texture.spv  frag_texture_font.frag  frag_texture_font.spv  frag_texture_parallax.frag  frag_texture_parallax.spv  frag_texture_scrolling.frag  frag_texture_scrolling.spv  frag_texture_ui.frag  frag_texture_ui.spv  shader.comp  snakeskin.frag  snakeskin.spv  triangle.vert  vert.spv  vert.vert  vert_font.spv  vert_font.vert  (+10 more)
src/: Logger.h  Window.cpp  backward.hpp  game.cpp.old  main.cpp
src/engine/: AABB.h  Atlas.h  AtlasIndex.h  Buffer.cpp  Buffer.h  Camera.h  Collision.h  Debug.cpp  Debug.h  Draworder.h  Engine.cpp  Engine.h  EntityManager.h  Ground.h  InstanceData.h  Mesh.cpp  Mesh.h  MeshRegistry.h  PIpelines.cpp  Pipelines.h  Quad.h  QuadRenderer.h  Shadertype.h  SwapChain.cpp  SwapChain.h  Texture.h  TextureComponent.h  Transform.h  Vertex.h  Window.cpp  Window.h
src/game/: Collision.h  Colors.h  Entity.h  EntityManager.h  Game.cpp  Game.h  Snake.H  SnakeMath.h  Vertex.h
src/renderer/: ComputeShaderApplication.cpp  ComputeShaderApplication.h  SwapChain.h  vulkan_commandbuffers.cpp  vulkan_commandbuffers.h  vulkan_commandpool.cpp  vulkan_commandpool.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffers.cpp  vulkan_framebuffers.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_syncobjects.cpp  vulkan_syncobjects.h
src/tusj/: Colors.h
